--- a/fine_tune.ipynb
+++ b/fine_tune.ipynb
@@ -432,7 +432,7 @@
         "df = df[[\"Description\", \"Sentiment\"]].dropna()\n",
         "df.columns = [\"text\", \"label\"]\n",
         "\n",
-        "# ✅ Manual mapping: text labels to integers\n",
+        "# Manual mapping: text labels to integers\n",
         "label_mapping = {\"negative\": 0, \"neutral\": 1, \"positive\": 2}\n",
         "df[\"labels\"] = df[\"label\"].map(label_mapping)\n",
         "\n",
